# Forprint_Integration_Gateway

./: .gitignore  Makefile  README.md  forprint_module_manifest.yaml  pyproject.toml
app/forprint_integration_gateway/: __init__.py
coordination/prompts/: index.yaml
coordination/reports/: gateway_v0_3_1_coordination_records_fix_completion.md  gateway_v0_4_adapter_contracts_error_taxonomy_completion.md  gateway_v0_5_contract_compatibility_replay_dry_run_completion.md  gateway_v0_6_contract_release_consumer_acceptance_completion.md  index.yaml  (+1 more)
coordination/status/: current_status.md  (+2 more)
scripts/: check_blueprint_standards.py  check_gateway_adapter_contracts.py  check_gateway_contract_compatibility.py  check_gateway_contract_release.py  check_gateway_coordination_records.py  generate_contract_release_v0_6_artifacts.py  list_blueprint_standards.py  read_blueprint_outgoing_prompt.py  run_adapter_readiness_preview.py  run_backward_compatibility_preview.py  run_channel_intake_preview.py  run_compatibility_matrix_preview.py  run_consumer_acceptance_preview.py  run_contract_release_preview.py  run_gateway_checks.py  run_gateway_smoke.py  run_replay_fixtures_preview.py  sync_blueprint_standards.py  update_gateway_coordination_records.py
tests/: test_adapter_contracts_v0_4.py  test_blueprint_standards_v0_7.py  test_channel_intake_contracts.py  test_channel_intake_preview.py  test_contract_compatibility_v0_5.py  test_contract_release_v0_6.py  test_envelope.py  test_examples.py  test_gateway_processor.py  test_idempotency.py  test_manifest.py  test_router.py  test_smoke_runner.py
(+77 files in other folders)
